--- a/schedulemanager/build.gradle
+++ b/schedulemanager/build.gradle
@@ -1,11 +1,12 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion BUILD_TOOLS_VERSION
+    buildToolsVersion "24.0.0 rc2"
 
     defaultConfig {
-        minSdkVersion 8
+        applicationId "jqyzyh.iee.schedulemanager"
+        minSdkVersion 7
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -21,5 +22,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23+'
+    compile 'com.android.support:support-v4:23+'
 }
