--- a/cusomwidget/build.gradle
+++ b/cusomwidget/build.gradle
@@ -1,11 +1,9 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion BUILD_TOOLS_VERSION
-
+    buildToolsVersion "24.0.0 rc2"
     defaultConfig {
-        applicationId "com.jqyzyh.learn"
         minSdkVersion 8
         targetSdkVersion 23
         versionCode 1
@@ -17,12 +15,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23+'
-    compile project(':cusomwidget')
-    compile project(':schedulemanager')
+    compile 'com.android.support:support-v4:23.4.0'
 }
