--- a/cusomwidget/src/main/AndroidManifest.xml
+++ b/cusomwidget/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="enorth.cusomwidget">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="jqyzyh.iee.cusomwidget">
 
     <application android:allowBackup="false"
         android:supportsRtl="true">
