--- a/cusomwidget/build.gradle
+++ b/cusomwidget/build.gradle
@@ -22,5 +22,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:support-v4:23.3+'
 }
