--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':schedulemanager', ':cusomwidget', ':camera'
+include ':app', ':schedulemanager', ':cusomwidget', ':camera', ':commen'
