--- a/commen/src/main/AndroidManifest.xml
+++ b/commen/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="jqyzyh.iee.commen">
 
-<application android:allowBackup="true" android:label="@string/app_name"
+<application android:allowBackup="false" android:label="@string/app_name"
     android:supportsRtl="true">
 
 </application>
