--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-BUILD_TOOLS_VERSION=24.0.0 rc2
+BUILD_TOOLS_VERSION=24.0.2
