--- a/wuxianxuanxiangka/build.gradle
+++ b/wuxianxuanxiangka/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "24.0.0 rc2"
+    buildToolsVersion BUILD_TOOLS_VERSION
 
     defaultConfig {
         applicationId "jqyzyh.myapplication"
