--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.2.0'
         classpath 'me.tatarka:gradle-retrolambda:3.2.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,6 +16,11 @@ allprojects {
     repositories {
         jcenter()
     }
+}
+
+ext{
+    COMPILE_SDK_VERSION=23
+    BUILD_TOOLS_VERSION='24.0.2'
 }
 
 task clean(type: Delete) {
