--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+
     <application
         android:allowBackup="false"
         android:hardwareAccelerated="true"
@@ -35,7 +37,10 @@
             android:name=".ScrollingActivity"
             android:label="@string/title_activity_scrolling"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ListAnimHeaderActivity" android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ListAnimHeaderActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".PlaySoundActivity" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
