--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
 
     <application
         android:allowBackup="false"
-        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:screenOrientation="portrait"
@@ -27,7 +26,8 @@
             android:name=".ScheduleActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".CameraActivity" />
-        <activity android:name=".WebViewActivity" />
+        <activity android:name=".WebViewActivity" android:windowSoftInputMode="stateAlwaysHidden|adjustNothing"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".TestActivity" />
         <activity android:name=".PathPaintActivity" />
         <activity android:name=".WheelViewActivity" />
