添加一个仿QQ的侧滑菜单

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,9 @@
             android:name=".PlayVideoActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".QQDrawerLayoutActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".FullWindowVideoActivity"
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
