添加一个与viewpager联动的tablayout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
         <activity android:name=".WrapLayoutActivity" />
         <activity android:name=".BlurActivity" />
         <activity android:name=".NestedScrollingActivity"></activity>
+        <activity android:name=".PageIndicatorActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
