--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     repositories {
-        jcenter()
+        maven{url 'https://maven.aliyun.com/repository/jcenter'}
         maven { url 'https://maven.google.com' }
     }
     dependencies {
@@ -14,7 +14,7 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        maven{url 'https://maven.aliyun.com/repository/jcenter'}
         maven { url 'https://maven.google.com' }
     }
 }
